--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,11 +1,51 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+    </style>
+
+    <!-- layout -->
+    <style name="top_bar_layout">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:background">@color/top_bar_bg</item>
+        <item name="android:layout_height">48dp</item>
+    </style>
+
+    <style name="match_match_layout">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">54dp</item>
+    </style>
+
+    <!-- TextView -->
+    <style name="top_bar_title_text" parent="wrap_wrap_layout">
+        <item name="android:textColor">@color/blank</item>
+        <item name="android:textSize">14sp</item>
+        <item name="android:layout_centerInParent">true</item>
+    </style>
+
+    <style name="match_wrap_layout">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">54dp</item>
+    </style>
+
+    <style name="wrap_wrap_layout">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">match_parent</item>
+        <item name="android:layout_marginTop">1dp</item>
+        <item name="android:layout_marginLeft">40dp</item>
+        <item name="android:layout_marginRight">40dp</item>
+        <item name="android:layout_marginBottom">1dp</item>
+    </style>
+
+    <!-- radio group -->
+    <style name="tab_radio_group" parent="match_wrap_layout">
+        <item name="android:layout_alignParentBottom">true</item>
+        <item name="android:orientation">horizontal</item>
+        <item name="android:background">@color/bar_bg</item>
     </style>
 
 </resources>
