--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,14 +3,38 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.longjoy.parttimejob.MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!" />
+    <include
+        android:id="@+id/activity_main_topbar"
+        layout="@layout/top_bar">
+    </include>
+
+    <RadioGroup
+        android:id="@+id/activity_main_rg_tabs"
+        style="@style/tab_radio_group"
+        android:gravity="center_vertical">
+
+        <RadioButton
+            style="@style/wrap_wrap_layout"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:background="@drawable/home_selector"
+            android:button="@null" />
+
+        <RadioButton
+            style="@style/wrap_wrap_layout"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:background="@drawable/job_selector"
+            android:button="@null" />
+
+        <RadioButton
+            style="@style/wrap_wrap_layout"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:background="@drawable/me_selector"
+            android:button="@null" />
+    </RadioGroup>
+
 </RelativeLayout>
