--- a/app/src/main/res/layout/top_bar.xml
+++ b/app/src/main/res/layout/top_bar.xml
@@ -11,7 +11,7 @@
         android:drawableRight="@mipmap/flq2"
         android:gravity="center"
         android:text="@string/all"
-        android:textColor="@color/title_color"/>
+        android:textColor="@color/white"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -19,7 +19,7 @@
         android:layout_centerInParent="true"
         android:gravity="center"
         android:text="@string/top_title"
-        android:textColor="@color/title_color"
+        android:textColor="@color/white"
         android:textSize="18sp" />
 
 </RelativeLayout>
