--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,7 @@
     <color name="colorAccent">#FF4081</color>
     <color name="bar_bg">#f2f2f4</color>
     <color name="top_bar_bg">#FF027FFD</color>
-    <color name="title_color">#ffffff</color>
-    <color name="blank">#000000</color>
+    <color name="white">#ffffff</color>
+    <color name="black">#000000</color>
+    <color name="main_color">#FF027FFD</color>
 </resources>
