--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -22,7 +22,7 @@
 
     <!-- TextView -->
     <style name="top_bar_title_text" parent="wrap_wrap_layout">
-        <item name="android:textColor">@color/blank</item>
+        <item name="android:textColor">@color/black</item>
         <item name="android:textSize">14sp</item>
         <item name="android:layout_centerInParent">true</item>
     </style>
