--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -42,6 +42,7 @@
             android:layout_width="match_parent"
             android:layout_height="48dp"
             android:layout_marginTop="8dp"
+            android:inputType="textPassword"
             android:background="@drawable/edittext_bg"
             android:hint="@string/password"
             android:paddingLeft="8dp"
@@ -65,6 +66,7 @@
             android:textColor="@color/white" />
 
         <TextView
+            android:id="@+id/activity_login_tv_forgetPass"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
