--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -20,6 +20,7 @@
             android:textSize="16sp" />
 
         <EditText
+            android:id="@+id/activity_register_telephone"
             style="@style/my_editText"
             android:layout_width="match_parent"
             android:layout_height="36dp"
@@ -38,6 +39,7 @@
             android:layout_marginTop="8dp">
 
             <EditText
+                android:id="@+id/activity_main_identifyCode"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="3"
@@ -63,6 +65,7 @@
             android:textSize="16sp" />
 
         <EditText
+            android:id="@+id/activity_register_invitationCode"
             style="@style/my_editText"
             android:layout_width="match_parent"
             android:layout_height="36dp"
@@ -76,6 +79,7 @@
             android:textSize="16sp" />
 
         <EditText
+            android:id="@+id/activity_register_username"
             style="@style/my_editText"
             android:layout_width="match_parent"
             android:layout_height="36dp"
@@ -89,9 +93,11 @@
             android:textSize="16sp" />
 
         <EditText
+            android:id="@+id/activity_register_password"
             style="@style/my_editText"
             android:layout_width="match_parent"
             android:layout_height="36dp"
+            android:inputType="textPassword"
             android:textCursorDrawable="@drawable/cursor_bg" />
 
         <TextView
@@ -103,9 +109,11 @@
             android:textSize="16sp" />
 
         <EditText
+            android:id="@+id/activity_register_nextpassword"
             style="@style/my_editText"
             android:layout_width="match_parent"
             android:layout_height="36dp"
+            android:inputType="textPassword"
             android:textCursorDrawable="@drawable/cursor_bg" />
 
         <TextView
@@ -117,6 +125,7 @@
             android:textSize="12sp" />
 
         <Button
+            android:id="@+id/activity_register_btn_ok"
             android:layout_width="match_parent"
             android:layout_height="36dp"
             android:layout_marginTop="8dp"
