--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -24,6 +24,7 @@
             style="@style/my_editText"
             android:layout_width="match_parent"
             android:layout_height="36dp"
+            android:text="13594350035"
             android:textCursorDrawable="@drawable/cursor_bg" />
 
         <TextView
@@ -83,6 +84,7 @@
             style="@style/my_editText"
             android:layout_width="match_parent"
             android:layout_height="36dp"
+            android:text="陈彬"
             android:textCursorDrawable="@drawable/cursor_bg" />
 
         <TextView
@@ -98,6 +100,7 @@
             android:layout_width="match_parent"
             android:layout_height="36dp"
             android:inputType="textPassword"
+            android:text="123456"
             android:textCursorDrawable="@drawable/cursor_bg" />
 
         <TextView
@@ -114,6 +117,7 @@
             android:layout_width="match_parent"
             android:layout_height="36dp"
             android:inputType="textPassword"
+            android:text="123456"
             android:textCursorDrawable="@drawable/cursor_bg" />
 
         <TextView
