--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -17,6 +17,7 @@
         android:orientation="horizontal">
 
         <ImageView
+            android:id="@+id/activity_login_iv_logo"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_gravity="center"
@@ -80,6 +81,7 @@
             android:text="忘记密码？找回密码"
             android:textColor="@color/main_color"
             android:textSize="14sp" />
+
 
     </LinearLayout>
 </LinearLayout>
