--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -1,143 +1,154 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/press_bg"
-    android:scrollbars="vertical"
-    tools:context="com.example.longjoy.parttimejob.activity.RegisterActivity">
+    android:orientation="vertical">
 
-    <LinearLayout
+    <include layout="@layout/top_bar_common"/>
+
+
+
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:padding="@dimen/activity_8">
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="请输入您的手机号"
-            android:textSize="16sp" />
-
-        <EditText
-            android:id="@+id/activity_register_telephone"
-            style="@style/my_editText"
-            android:layout_width="match_parent"
-            android:layout_height="36dp"
-            android:text="13594350035"
-            android:textCursorDrawable="@drawable/cursor_bg" />
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/activity_vertical_margin"
-            android:text="请输入验证码"
-            android:textSize="16sp" />
+        android:background="@color/press_bg"
+        android:scrollbars="vertical"
+        tools:context="com.example.longjoy.parttimejob.activity.RegisterActivity">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="36dp"
-            android:layout_marginTop="8dp">
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:padding="@dimen/activity_8">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="请输入您的手机号"
+                android:textSize="16sp" />
 
             <EditText
-                android:id="@+id/activity_main_identifyCode"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="3"
-                android:background="@drawable/edittext_bg"
-                android:paddingLeft="8dp"
+                android:id="@+id/activity_register_telephone"
+                style="@style/my_editText"
+                android:layout_width="match_parent"
+                android:layout_height="36dp"
+                android:text="13594350035"
                 android:textCursorDrawable="@drawable/cursor_bg" />
 
             <TextView
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_marginLeft="@dimen/activity_vertical_margin"
-                android:layout_weight="1"
-                android:background="@drawable/edittext_bg"
-                android:gravity="center"
-                android:text="获取验证码" />
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/activity_vertical_margin"
+                android:text="请输入验证码"
+                android:textSize="16sp" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="36dp"
+                android:layout_marginTop="8dp">
+
+                <EditText
+                    android:id="@+id/activity_main_identifyCode"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="3"
+                    android:background="@drawable/edittext_bg"
+                    android:paddingLeft="8dp"
+                    android:textCursorDrawable="@drawable/cursor_bg" />
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_marginLeft="@dimen/activity_vertical_margin"
+                    android:layout_weight="1"
+                    android:background="@drawable/edittext_bg"
+                    android:gravity="center"
+                    android:text="获取验证码" />
+            </LinearLayout>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/activity_vertical_margin"
+                android:text="请输入您的邀请码（选填）"
+                android:textSize="16sp" />
+
+            <EditText
+                android:id="@+id/activity_register_invitationCode"
+                style="@style/my_editText"
+                android:layout_width="match_parent"
+                android:layout_height="36dp"
+                android:textCursorDrawable="@drawable/cursor_bg" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/activity_vertical_margin"
+                android:text="请输入您的姓名"
+                android:textSize="16sp" />
+
+            <EditText
+                android:id="@+id/activity_register_username"
+                style="@style/my_editText"
+                android:layout_width="match_parent"
+                android:layout_height="36dp"
+                android:text="陈彬"
+                android:textCursorDrawable="@drawable/cursor_bg" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/activity_vertical_margin"
+                android:text="请设置您的密码"
+                android:textSize="16sp" />
+
+            <EditText
+                android:id="@+id/activity_register_password"
+                style="@style/my_editText"
+                android:layout_width="match_parent"
+                android:layout_height="36dp"
+                android:inputType="textPassword"
+                android:text="123456"
+                android:textCursorDrawable="@drawable/cursor_bg" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/activity_vertical_margin"
+                android:text="请确认您的密码"
+                android:textCursorDrawable="@drawable/cursor_bg"
+                android:textSize="16sp" />
+
+            <EditText
+                android:id="@+id/activity_register_nextpassword"
+                style="@style/my_editText"
+                android:layout_width="match_parent"
+                android:layout_height="36dp"
+                android:inputType="textPassword"
+                android:text="123456"
+                android:textCursorDrawable="@drawable/cursor_bg" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/activity_vertical_margin"
+                android:text="@string/reminder"
+                android:textColor="@color/actionsheet_red"
+                android:textSize="12sp" />
+
+            <Button
+                android:id="@+id/activity_register_btn_ok"
+                android:layout_width="match_parent"
+                android:layout_height="36dp"
+                android:layout_marginTop="8dp"
+                android:background="@drawable/btn_bg"
+                android:text="注   册"
+                android:textColor="@color/white" />
+
         </LinearLayout>
+    </ScrollView>
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/activity_vertical_margin"
-            android:text="请输入您的邀请码（选填）"
-            android:textSize="16sp" />
+</LinearLayout>
 
-        <EditText
-            android:id="@+id/activity_register_invitationCode"
-            style="@style/my_editText"
-            android:layout_width="match_parent"
-            android:layout_height="36dp"
-            android:textCursorDrawable="@drawable/cursor_bg" />
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/activity_vertical_margin"
-            android:text="请输入您的姓名"
-            android:textSize="16sp" />
-
-        <EditText
-            android:id="@+id/activity_register_username"
-            style="@style/my_editText"
-            android:layout_width="match_parent"
-            android:layout_height="36dp"
-            android:text="陈彬"
-            android:textCursorDrawable="@drawable/cursor_bg" />
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/activity_vertical_margin"
-            android:text="请设置您的密码"
-            android:textSize="16sp" />
-
-        <EditText
-            android:id="@+id/activity_register_password"
-            style="@style/my_editText"
-            android:layout_width="match_parent"
-            android:layout_height="36dp"
-            android:inputType="textPassword"
-            android:text="123456"
-            android:textCursorDrawable="@drawable/cursor_bg" />
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/activity_vertical_margin"
-            android:text="请确认您的密码"
-            android:textCursorDrawable="@drawable/cursor_bg"
-            android:textSize="16sp" />
-
-        <EditText
-            android:id="@+id/activity_register_nextpassword"
-            style="@style/my_editText"
-            android:layout_width="match_parent"
-            android:layout_height="36dp"
-            android:inputType="textPassword"
-            android:text="123456"
-            android:textCursorDrawable="@drawable/cursor_bg" />
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/activity_vertical_margin"
-            android:text="@string/reminder"
-            android:textColor="@color/actionsheet_red"
-            android:textSize="12sp" />
-
-        <Button
-            android:id="@+id/activity_register_btn_ok"
-            android:layout_width="match_parent"
-            android:layout_height="36dp"
-            android:layout_marginTop="8dp"
-            android:background="@drawable/btn_bg"
-            android:text="注   册"
-            android:textColor="@color/white" />
-
-    </LinearLayout>
-
-
-</ScrollView>
