页面切换动作设置，用户短息验证码校验

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -49,5 +49,5 @@
     <color name="actionsheet_blue">#037BFF</color>
     <color name="actionsheet_red">#FD4A2E</color>
     <color name="actionsheet_gray">#8F8F8F</color>
-
+    <color name="text_defulat">#8F8F8F</color>
 </resources>
