--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
-    tools:context="com.example.longjoy.parttimejob.MainActivity">
+    tools:context=".activity.MainActivity">
 
     <include
         android:id="@+id/activity_main_topbar"
