--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -50,4 +50,5 @@
     <color name="actionsheet_red">#FD4A2E</color>
     <color name="actionsheet_gray">#8F8F8F</color>
     <color name="text_defulat">#8F8F8F</color>
+    <color name="layout_press">#e7e7e7</color>
 </resources>
