--- a/app/src/main/res/layout/top_bar.xml
+++ b/app/src/main/res/layout/top_bar.xml
@@ -14,6 +14,7 @@
         android:textColor="@color/white"/>
 
     <TextView
+        android:id="@+id/top_bar_tv_title"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_centerInParent="true"
