添加仿美团城市列表

--- a/app/src/main/res/drawable/home_selector.xml
+++ b/app/src/main/res/drawable/home_selector.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:state_checked="true"><bitmap android:gravity="center" android:src="@mipmap/tab_button_activity_sel" android:tileMode="disabled" />
+    <item android:state_checked="true"><bitmap android:gravity="center" android:src="@mipmap/shouyetianchong" android:tileMode="disabled" />
     </item>
-    <item android:state_selected="true"><bitmap android:gravity="center" android:src="@mipmap/tab_button_activity_sel" android:tileMode="disabled" />
+    <item android:state_selected="true"><bitmap android:gravity="center" android:src="@mipmap/shouyetianchong" android:tileMode="disabled" />
     </item>
-    <item android:state_pressed="true"><bitmap android:gravity="center" android:src="@mipmap/tab_button_activity_sel" android:tileMode="disabled" />
+    <item android:state_pressed="true"><bitmap android:gravity="center" android:src="@mipmap/shouyetianchong" android:tileMode="disabled" />
     </item>
-    <item><bitmap android:gravity="center" android:src="@mipmap/tab_button_activity_nor" android:tileMode="disabled" />
+    <item><bitmap android:gravity="center" android:src="@mipmap/shouye" android:tileMode="disabled" />
     </item>
 </selector>
