--- a/app/src/main/res/layout/activity_city_choose.xml
+++ b/app/src/main/res/layout/activity_city_choose.xml
@@ -1,36 +1,91 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context="com.example.longjoy.parttimejob.activity.CityChooseActivity">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:background="#f0f0f0"
+    android:orientation="vertical">
 
-    <include layout="@layout/top_bar_common" />
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <ListView
-            android:id="@+id/activity_city_choose_lv_left"
-            android:dividerHeight="@dimen/activity_8"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"></ListView>
+    <RelativeLayout
+        android:id="@+id/title"
+        android:layout_width="fill_parent"
+        android:layout_height="45dip"
+        android:background="@color/main_color">
 
         <ImageView
-            android:layout_width="12dp"
-            android:layout_height="match_parent"
-            android:background="@drawable/actionsheet_top_pressed" />
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:background="@mipmap/wb_btn_off_normal" />
 
-        <ListView
-            android:id="@+id/activity_city_choose_lv_right"
-            android:dividerHeight="4dp"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"></ListView>
-    </LinearLayout>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
+            android:text="切换城市"
+            android:textColor="#ffffff"
+            android:textSize="22sp" />
+    </RelativeLayout>
 
+    <EditText
+        android:id="@+id/sh"
+        android:layout_width="fill_parent"
+        android:layout_height="48dp"
+        android:layout_below="@id/title"
+        android:layout_margin="10dip"
+        android:background="@drawable/search_bg"
+        android:drawableLeft="@mipmap/wb_search_icon"
+        android:drawablePadding="5dp"
+        android:hint="输入城市名或拼音"
+        android:padding="10dip"
+        android:textColor="#515151"
+        android:textCursorDrawable="@drawable/cursor_bg"
+        android:textSize="16dp"></EditText>
 
-</LinearLayout>
+    <ListView
+        android:id="@+id/list_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@id/sh"
+        android:layout_marginTop="7dp"
+        android:cacheColorHint="#00000000"
+        android:divider="#00000000"
+        android:dividerHeight="0dp"
+        android:listSelector="@android:color/transparent"
+        android:scrollbars="none" />
+
+    <ListView
+        android:id="@+id/search_result"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@id/sh"
+        android:layout_marginTop="7dp"
+        android:cacheColorHint="#00000000"
+        android:divider="#00000000"
+        android:dividerHeight="0dp"
+        android:listSelector="@android:color/transparent"
+        android:scrollbars="none"
+        android:visibility="gone" />
+
+    <TextView
+        android:id="@+id/tv_noresult"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/sh"
+        android:gravity="center"
+        android:padding="10dp"
+        android:text="抱歉,暂时没有找到相关城市"
+        android:textColor="#000000"
+        android:textSize="16sp"
+        android:visibility="gone" />
+
+    <com.example.longjoy.parttimejob.widget.MyLetterListView
+        android:id="@+id/MyLetterListView01"
+        android:layout_width="25dip"
+        android:layout_height="fill_parent"
+        android:layout_alignParentRight="true"
+        android:layout_below="@id/sh"
+        android:layout_marginRight="2dp"
+        android:layout_marginTop="7dp" />
+
+</RelativeLayout>
