--- a/app/src/main/res/layout/firstpage_fragment.xml
+++ b/app/src/main/res/layout/firstpage_fragment.xml
@@ -2,7 +2,13 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/black"
+    android:background="@color/white"
     android:orientation="vertical">
+
+    <ListView
+        android:id="@+id/firstpage_list"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:scrollbars="none"></ListView>
 
 </LinearLayout>
