--- a/app/src/main/res/layout/top_bar.xml
+++ b/app/src/main/res/layout/top_bar.xml
@@ -11,7 +11,7 @@
         android:drawableRight="@mipmap/flq2"
         android:gravity="center"
         android:text="@string/all"
-        android:textColor="@color/white"/>
+        android:textColor="@color/white" />
 
     <TextView
         android:id="@+id/top_bar_tv_title"
@@ -22,5 +22,18 @@
         android:text="@string/top_title"
         android:textColor="@color/white"
         android:textSize="18sp" />
+
+    <TextView
+        android:id="@+id/top_bar_tv_right"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_alignParentRight="true"
+        android:layout_centerInParent="true"
+        android:layout_marginRight="@dimen/activity_8"
+        android:gravity="center_vertical"
+        android:text="@string/finsh"
+        android:textColor="@color/white"
+        android:textSize="18sp"
+        android:visibility="gone" />
 
 </RelativeLayout>
