--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -24,6 +24,9 @@
     <!-- words F color -->
     <color name="f">#bfbfbf</color>
 
+    <!-- 背景底色-->
+    <color name="bg">#f5f5f5</color>
+
     <!-- word G color -->
 
 
