添加兼职工作详细页面，列表修改细节

--- a/app/src/main/res/layout/job_info_item.xml
+++ b/app/src/main/res/layout/job_info_item.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="100dp"
+    android:layout_height="80dp"
     android:orientation="horizontal">
 
     <LinearLayout
@@ -13,8 +13,8 @@
 
         <ImageView
             android:id="@+id/job_info_item_photo"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
             android:layout_gravity="center_vertical"
             android:background="@mipmap/cuxiao2" />
     </LinearLayout>
@@ -24,17 +24,16 @@
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="6"
-        android:orientation="vertical"
-        android:paddingLeft="20dp">
+        android:orientation="vertical">
 
         <TextView
             android:id="@+id/job_info_item_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="4dp"
+            android:layout_marginTop="6dp"
             android:text="德克士兼职促销"
-            android:textColor="#666666"
-            android:textSize="20sp" />
+            android:textColor="@color/black"
+            android:textSize="16sp" />
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -46,43 +45,47 @@
                 android:id="@+id/job_info_item_tag1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginRight="@dimen/activity_8"
                 android:drawableLeft="@mipmap/dui"
                 android:drawablePadding="4dp"
                 android:text="放心"
-                android:textSize="11sp"
+                android:textColor="#b8b8b8"
+                android:textSize="13sp"
                 android:visibility="gone" />
 
             <TextView
                 android:id="@+id/job_info_item_tag2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="@dimen/activity_8"
+                android:layout_marginRight="@dimen/activity_8"
                 android:drawableLeft="@mipmap/dui"
                 android:drawablePadding="4dp"
                 android:text="男 女"
-                android:textSize="11sp"
+                android:textColor="#b8b8b8"
+                android:textSize="13sp"
                 android:visibility="gone" />
 
             <TextView
                 android:id="@+id/job_info_item_tag3"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="@dimen/activity_8"
+                android:layout_marginRight="@dimen/activity_8"
                 android:drawableLeft="@mipmap/dui"
                 android:drawablePadding="4dp"
                 android:text="日结"
-                android:textSize="11sp"
+                android:textColor="#b8b8b8"
+                android:textSize="13sp"
                 android:visibility="gone" />
 
             <TextView
                 android:id="@+id/job_info_item_tag4"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="@dimen/activity_8"
                 android:drawableLeft="@mipmap/dui"
                 android:drawablePadding="4dp"
                 android:text="提成"
-                android:textSize="11sp"
+                android:textColor="#b8b8b8"
+                android:textSize="13sp"
                 android:visibility="gone" />
 
         </LinearLayout>
@@ -92,15 +95,21 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="4dp">
 
+            <ImageView
+                android:layout_width="10dp"
+                android:layout_height="14dp"
+                android:layout_marginTop="2dp"
+                android:background="@mipmap/dingwei" />
+
             <TextView
                 android:id="@+id/job_info_item_place"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:drawableLeft="@mipmap/dingwei"
-                android:drawablePadding="4dp"
+                android:layout_marginLeft="4dp"
                 android:gravity="center_vertical"
                 android:text="沙坪坝区"
-                android:textSize="11sp" />
+                android:textColor="#b8b8b8"
+                android:textSize="13sp" />
 
             <TextView
                 android:id="@+id/job_info_item_date"
@@ -108,7 +117,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="@dimen/activity_horizontal_margin"
                 android:text="03-18"
-                android:textSize="11sp" />
+                android:textColor="#b8b8b8"
+                android:textSize="13sp" />
         </LinearLayout>
 
     </LinearLayout>
@@ -116,9 +126,9 @@
     <LinearLayout
         android:layout_width="0dp"
         android:layout_height="match_parent"
-        android:layout_marginBottom="10dp"
-        android:layout_weight="2.5"
+        android:layout_weight="3"
         android:gravity="bottom|right"
+        android:paddingBottom="5dp"
         android:paddingRight="4dp">
 
         <TextView
@@ -126,13 +136,15 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="150"
-            android:textColor="@color/actionsheet_red"
+            android:textColor="#fe5d02"
             android:textSize="22sp" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="元/天" />
+            android:text="元/天"
+            android:textColor="#b8b8b8"
+            android:textSize="14sp" />
 
     </LinearLayout>
 
