--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -120,5 +120,17 @@
         <attr name="border_color" format="color" />
     </declare-styleable>
 
+    <style name="line_heng">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">0.5dp</item>
+        <item name="android:background">#dddddd</item>
+    </style>
+
+    <style name="line_su">
+        <item name="android:layout_width">0.5dp</item>
+        <item name="android:layout_height">match_parent</item>
+        <item name="android:background">#dddddd</item>
+    </style>
+
 
 </resources>
